# AIAgent

./: .coverage  .gitignore  AGENTS.md  AIAgent_ENHANCED_REPORT.md  CODE_WIKI.md  LICENSE  README.md  agent.md  control-plane-architecture.html  pyproject.toml  团队流程规范.md
.github/workflows/: control-plane-ci.yml
.hermes/: config.json  团队流程规范.md
.hermes/agents/: README.md
.hermes/memories/: MEMORY.md  USER.md
.hermes/team/: AGENTS.md  EVOLUTION.md  LEARNING_PLAN.md  README.md  STATUS.md
.hermes/workflows/: project_delivery.json
docs/architecture/: control-plane-overview.md
docs/contracts/: handoff-contract.md  provider-contracts.md
docs/runtime/: handoff-and-continuation.md  runtime-governance.md
tests/control_plane/: test_adapters.py  test_aggregator.py  test_baseline.py  test_benchmark_runner.py  test_ci_smoke.py  test_cli_enhanced.py  test_code_intelligence.py  test_collaboration.py  test_common_tools.py  test_config.py  test_conflicts.py  test_continuation.py  test_documentation_contracts.py  test_executor.py  test_file_lock.py  test_framework_cli.py  test_framework_compat.py  test_framework_monitor.py  test_framework_team_cli_control_plane.py  test_framework_workflow.py  test_governance.py  test_handoff.py  test_handoff_coordinator.py  test_handoff_runtime.py  test_hermes_health.py  test_hermes_provider.py  test_knowledge_analytics.py  test_knowledge_consumer.py  test_knowledge_feedback.py  test_knowledge_loop.py  test_knowledge_models.py  test_knowledge_query.py  test_legacy_enhanced_package_removed.py  test_metrics.py  test_models.py  (+25 more)
(+705 files in other folders)
