[project]
name = "ai-agent-control-plane"
version = "0.1.0"
description = "Repository control plane with Hermes/OpenClaw aligned execution"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501", "E722", "E741"]

[tool.coverage.run]
branch = true
source = [".hermes/team/control_plane", ".hermes/team/调度框架/core", "tests/control_plane"]

[tool.coverage.report]
show_missing = true
skip_covered = false
include = [
    ".hermes/team/control_plane/config.py",
    ".hermes/team/control_plane/persistent_bus.py",
    ".hermes/team/control_plane/workflow_runtime.py",
    ".hermes/team/control_plane/cli.py",
]
fail_under = 90
